# kraken2rfb

./: .gitignore  Cargo.toml  README.md  build.rs  kraken_keys.json.example
kraken_data/: assets.json  kraken_pairs.json
src/: exchange_rate.rs  kraken.rs  kraken_pairs.rs  main.rs
src/report/: encoding.rs  mod.rs  transactions.rs
