[package]
name = "bcb_exchange_report"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
reqwest = { version = "0.12.18", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_urlencoded = "0.7"
rust_decimal = { version = "1.32", features = ["serde"] }
rust_decimal_macros = "1.32"
itertools = "0.12"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
phf = { version = "0.11", features = ["macros"] }
