[package]
name = "kraken2rfb"
description = "A tool for generating RFB reports from Kraken data"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/lvella/kraken2rfb"

[dependencies]
chrono = "0.4.41"
reqwest = { version = "0.12.18", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["arbitrary_precision"] }
serde_urlencoded = "0.7"
rust_decimal = { version = "1.37", features = ["serde"] }
rust_decimal_macros = "1.37"
itertools = "0.12"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
phf = { version = "0.11", features = ["macros"] }

[build-dependencies]
serde_json = "1.0"
